# psql93_mig_tool

./: .gitignore  LICENSE  README.md  run_with_locale.sh
.claude/: settings.local.json
db_migration_tool/: .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  DB_ANALYSIS_RESULTS.md  IMPLEMENTATION_SUMMARY.md  Makefile  OMX_RUNBOOK_LEGACY_REMOVAL.md  OMX_RUNBOOK_REVIEW.md  README.md  analyze_db.py  build.bat  build_mac.sh  check_rules.py  convert_to_ico.py  create_icon.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_dev.bat  test_db_reset.py
db_migration_tool/.claude/: settings.local.json
db_migration_tool/.cursor/: project_plan.md
db_migration_tool/docs/: refactoring_analysis.md
db_migration_tool/docs/analyze/: ui_architecture_overview.md
db_migration_tool/docs/base/: 01_project_overview.md  04_ui_ux_design.md  05_migration_scenarios.md  src_db_info.md
db_migration_tool/docs/psql-version/: README.md
db_migration_tool/docs/refac/: 01_logger_refactoring.md  02_repository_refactoring.md  03_connection_dialog_refactoring.md  04_app_paths_centralization.md  05_ui_architecture_refactoring.md  README.md
db_migration_tool/resources/icons/: README.md
db_migration_tool/scripts/: generate_icons.py
db_migration_tool/src/: CLAUDE.md  main.py
db_migration_tool/src/core/: CLAUDE.md  __init__.py  base_migration_worker.py  copy_migration_worker.py  migration_worker.py  partition_discovery.py  performance_metrics.py  table_creator.py  table_types.py
db_migration_tool/src/database/: local_db.py  postgres_utils.py  repository.py  version_info.py  version_params.py  version_sql.py
db_migration_tool/src/models/: history.py  profile.py
db_migration_tool/src/resources/icons/: app.icns
db_migration_tool/src/ui/: CLAUDE.md  main_window.py  tray_icon.py
db_migration_tool/src/ui/dialogs/: connection_dialog.py  connection_mapper.py  log_viewer_dialog.py  migration_dialog.py  migration_wizard_dialog.py
db_migration_tool/src/ui/viewmodels/: __init__.py  base_viewmodel.py  main_viewmodel.py  migration_viewmodel.py
db_migration_tool/src/utils/: app_paths.py  enhanced_logger.py  logger.py  logger_config.py  logger_mixins.py  validators.py
db_migration_tool/tests/: conftest.py  test_managers.py  test_migration_workers.py  test_session_scope.py  test_tray_icon.py  verify_copy_worker.py
db_migration_tool/tests/database/: __init__.py  test_repository.py  test_version_detection.py
db_migration_tool/tests/ui/: test_base_viewmodel.py  test_main_viewmodel.py  test_migration_viewmodel.py
db_migration_tool/tests/ui/dialogs/: __init__.py  test_connection_mapper.py
db_migration_tool/tests/utils/: __init__.py  test_app_paths.py  test_logger_config.py  test_logger_mixins.py
db_migration_tool/tools/: bench_server_copy_ph_3days.py  run_bench_server_copy.cmd
docs/: 02_functional_requirements.md  03_technical_architecture.md
