[project]
name = "db-migration-tool"
version = "1.0.0"
description = "PostgreSQL 파티션 테이블 마이그레이션 도구"
authors = [{name = "DB Migration Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

# Core dependencies
dependencies = [
    "PySide6>=6.5.0",
    "psycopg[binary]>=3.1.18",
    "psycopg-pool>=3.2.0",
    "psycopg2-binary>=2.9.9",
    "qdarkstyle>=3.2.3",
    "SQLAlchemy>=2.0.23",
    "cryptography>=41.0.7",
]

[project.optional-dependencies]
# Development dependencies (build, package)
dev = [
    "PyInstaller>=6.3.0",
]

# Test dependencies
test = [
    "pytest>=7.4.3",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

# All optional dependencies
all = [
    "db-migration-tool[dev,test]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pyside6-project]
qml-import-paths = []
qml-import-name = ""
input-file = ""
exec = ""
application-icon = ""

[project.scripts]
db-migration-tool = "src.main:main"