[project]
name = "db-migration-tool"
version = "1.0.0"
description = "PostgreSQL 파티션 테이블 마이그레이션 도구"
authors = [{name = "DB Migration Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}

# Core dependencies
dependencies = [
    "PySide6>=6.5.0",
    "psycopg[binary]>=3.1.18",
    "psycopg-pool>=3.2.0",
    "psycopg2-binary>=2.9.9",
    "qdarkstyle>=3.2.3",
    "SQLAlchemy>=2.0.23",
    "cryptography>=41.0.7",
]

[project.optional-dependencies]
# Development dependencies (build, package, lint, type check)
dev = [
    "PyInstaller>=6.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Test dependencies
test = [
    "pytest>=7.4.3",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

# All optional dependencies
all = [
    "db-migration-tool[dev,test]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
db-migration-tool = "src.main:main"

# Ruff 설정
[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**" = ["B011"]     # assert False

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy 설정
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pytest 설정
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage 설정
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
]
